@@ -7,8 +7,8 @@ no-name-in-module:23:0::No name 'compiile' in module 're'
 no-name-in-module:23:0::No name 'findiiter' in module 're'
 pointless-statement:26:0::Statement seems to have no effect
 no-name-in-module:34:4::No name 'anything' in module 'collections'
-no-name-in-module:44:4::No name 'indeed_missing' in module 'collections'
-no-name-in-module:49:4::No name 'emit' in module 'collections'
-no-name-in-module:60:8::No name 'emit2' in module 'collections'
-no-name-in-module:65:0::No name 'lala' in module 'functional.n.no.no_self_use'
-no-name-in-module:66:0::No name 'bla' in module 'functional.n.no.no_self_use'
+no-name-in-module:49:4::No name 'indeed_missing' in module 'collections'
+no-name-in-module:54:4::No name 'emit' in module 'collections'
+no-name-in-module:71:8::No name 'emit2' in module 'collections'
+no-name-in-module:76:0::No name 'lala' in module 'functional.n.no.no_self_use'
+no-name-in-module:77:0::No name 'bla' in module 'functional.n.no.no_self_use'
